add tast feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,20 @@
     
   </head>
 
-  <body>
-   <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+  <body class="flex lg:flex-row md:flex-row sm:flex-col">
+    <%= render "shared/navbar" %>
+    <div class="container border w-full h-auto min-h-screen">
+      <%= turbo_frame_tag :messages %>
+      
+      <% flash.each do |key, message| %>
+        <%= render partial: 'shared/flash', locals: { key: key, message: message } %>
+      <% end %>
 
+      <h1 class="text-center text-4xl p-4 border">Tasks</h1>
     <main class="container mx-auto mt-28 px-5 flex">
+  
       <%= yield %>
     </main>
+    </div>
   </body>
 </html>
