--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,15 +1,14 @@
-<div class="mx-auto md:w-2/3 w-full flex">
-  <div class="mx-auto">
-    <% if notice.present? %>
-      <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
-    <% end %>
+<%= turbo_frame_tag :task do %>
+  <div class="p-4 border w-full bg-white">
 
     <%= render @task %>
 
-    <%= link_to 'Edit this task', edit_task_path(@task), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="inline-block ml-2">
-      <%= button_to 'Destroy this task', task_path(@task), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+    <p class="font-serif font-semibold text-gray-600">Status: <%= @task.status ? 'Complete' : 'Incomplete' %></p>
+    <div class="mt-6 flex gap-2">
+      <%= link_to "Edit this task", edit_task_path(@task), class: 'btn-success', 'data-turbo-frame': 'task' %>
+      <%= link_to "Back to tasks", tasks_path, class: 'btn-info' %>
+
+      <%= button_to "Destroy this task", @task, method: :delete, class: 'btn-danger' %>
     </div>
-    <%= link_to 'Back to tasks', tasks_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
   </div>
-</div>
+<% end %>
